# FlashFusedMoE

./: README.md  pyproject.toml
benchmarks/: train_fineweb.py  train_multigpu.py
docs/: communication_overlap.md  expert_parallelism.md  fused_moe.md  guide.md  kernels.md  moe_layer.md
examples/: full_integration.py
examples/deepseek/: model.py
src/flashfusemoe/: __init__.py  distributed.py  expert_parallel.py  fused_moe.py  nn.py
src/flashfusemoe/kernels/: activations.py  fused_dispatch.py  fused_topk.py  moe_ops.py
tests/: conftest.py  test_generality.py  test_multigpu.py  test_production.py
